Postinstall prisma-generate
https://www.prisma.io/docs/orm/more/help-and-troubleshooting/vercel-caching-issue

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:reset": "docker compose down -v && docker compose up -d",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
