--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^149.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
     "prisma": "^6.8.2",
