Moderately-working player graph

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "vis-network": "^10.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
