--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -30,6 +31,7 @@
     "googleapis": "^149.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.13",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
