--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "edh-elo-nextjs",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma migrate deploy && next build",
